CAMBIO DE CSS EN LINEA 11

--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,8 @@
 }
 
 .principal{
-    background: linear-gradient(#cfab09,#ee0404);
+    background: linear-gradient(#cfab09,#70d68f);
+    
     padding: 20px;
     
 }
