Productos.css linea 157

--- a/productos.css
+++ b/productos.css
@@ -154,7 +154,7 @@ form label,form legend{ /* replicar estilos para varios selectores poniendo una 
 }
 
 table{
-    margin: 40px 40px;
+    margin: 50px 42%;
 }
 
 thead{
